--- a/.github/workflows/builds_desktop.yml
+++ b/.github/workflows/builds_desktop.yml
@@ -12,7 +12,7 @@ on:
 #-------------------------------------------------------------------------------
 
 env:
-  APPLICATION: "WatchFlower"
+  APPLICATION: "Blume"
   APPLICATION_VERSION: "5.0"
   QT_VERSION: "6.4.2"
 
