--- a/.github/workflows/builds_desktop.yml
+++ b/.github/workflows/builds_desktop.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   APPLICATION: "Blume"
-  APPLICATION_VERSION: "5.0.0"
+  APPLICATION_VERSION: "5.0"
   QT_VERSION: "6.4.2"
 
 #-------------------------------------------------------------------------------
@@ -151,12 +151,12 @@ jobs:
       - name: Upload ZIP
         uses: actions/upload-artifact@v3
         with:
-          name: ${{env.APPLICATION}}-${{env.APPLICATION_VERSION}}-win64.zip
-          path: ${{env.APPLICATION}}-${{env.APPLICATION_VERSION}}-win64.zip
+          name: ${{env.APPLICATION}}-${{env.APPLICATION_VERSION}}.0-win64.zip
+          path: ${{env.APPLICATION}}-${{env.APPLICATION_VERSION}}.0-win64.zip
 
       # Upload NSIS installer
       - name: Upload NSIS installer
         uses: actions/upload-artifact@v3
         with:
-          name: ${{env.APPLICATION}}-${{env.APPLICATION_VERSION}}-win64.exe
-          path: ${{env.APPLICATION}}-${{env.APPLICATION_VERSION}}-win64.exe
+          name: ${{env.APPLICATION}}-${{env.APPLICATION_VERSION}}.0-win64.exe
+          path: ${{env.APPLICATION}}-${{env.APPLICATION_VERSION}}.0-win64.exe
