--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@ contribs/*
 appdir/*
 
 # QtCreator temporary project files
-WatchFlower.config
-WatchFlower.creator*
-WatchFlower.files
-WatchFlower.includes
-WatchFlower.pro.*
+Blume.config
+Blume.creator*
+Blume.files
+Blume.includes
+Blume.pro.*
 
 # Qt Quick Compiler
 qrc_resources.cpp
@@ -26,7 +26,7 @@ CMakeLists.txt.user
 # XCode related
 Debug/*
 Release/*
-WatchFlower.xcodeproj/*
+Blume.xcodeproj/*
 asset_catalog_compiler.Info.plist
 
 # XCode signatures
