--- a/.github/workflows/builds_mobile.yml
+++ b/.github/workflows/builds_mobile.yml
@@ -62,7 +62,7 @@ jobs:
           host: 'linux'
           target: 'android'
           arch: 'android_arm64_v8a'
-          modules: qtconnectivity qtcharts qtshadertools qt5compat
+          modules: qtconnectivity qtcharts qtshadertools qt5compat qtmultimedia
           aqtversion: '==3.1.*'
           py7zrversion: '==0.20.*'
           extra: '--autodesktop'
@@ -93,7 +93,7 @@ jobs:
           version: ${{env.QT_VERSION}}
           host: 'mac'
           target: 'ios'
-          modules: qtconnectivity qtcharts qtshadertools qt5compat
+          modules: qtconnectivity qtcharts qtshadertools qt5compat qtmultimedia
           aqtversion: '==3.1.*'
           py7zrversion: '==0.20.*'
           extra: '--autodesktop'
