--- a/.github/workflows/builds_mobile.yml
+++ b/.github/workflows/builds_mobile.yml
@@ -5,8 +5,14 @@
 name: "Mobile CI builds"
 on:
   push:
-  pull_request:
+    branches:
+      - main
+      - dev
 
+  pull_request:
+    branches:
+      - dev
+      - main
 #-------------------------------------------------------------------------------
 # Define application name & version
 #-------------------------------------------------------------------------------
