--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -1,18 +1,37 @@
-name: Build CI IOS
+name: iOS CI Build
 
 on:
   push:
-    
+    branches:
+      - main
+
 jobs:
-  triage:
+  build-ios:
     runs-on: macos-latest
+
     steps:
-    - uses: jurplel/install-qt-action@v3
-      with:
-        aqtversion: '==3.1.*'
-        version: '6.5.3'
-        host: 'mac'
-        target: 'ios'
-        arch: 'ios'
-        modules: 'qtcharts qtconnectivity qtimageformats qtlocation qtmultimedia qtnetworkauth qtpositioning qtsensors qtwebchannel qtwebsockets qtwebview qt5compat qtshadertools'
-        dir: '${{ github.workspace }}/example_ios/'
+      - name: (4) Check out code
+        uses: actions/checkout@v3
+
+      - name: (5) Set up Xcode environment
+        uses: maxim-lobanov/setup-xcode@latest-stable
+        with:
+          xcode-version: 'latest'
+
+      - name: (6) Create build directory
+        run: mkdir ${RUNNER_TEMP}/build
+
+      - name: (7) Build with Xcode
+        working-directory: ${RUNNER_TEMP}/build
+        run: |
+          xcodebuild -project ${GITHUB_WORKSPACE}/Blume.xcodeproj -scheme Blume -sdk iphoneos -configuration Release clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+
+      - name: (8) Zip the build
+        working-directory: ${RUNNER_TEMP}
+        run: zip -r Blume-build.zip build/*
+
+      - name: (9) Save build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: Blume-Artifact
+          path: ${RUNNER_TEMP}/Blume-build.zip
