--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -2,25 +2,37 @@
 # # Workflow configuration
 # #-------------------------------------------------------------------------------
 
-# name: "Flatpak build"
-# on: workflow_dispatch
+name: "Flatpak build"
 
-# #-------------------------------------------------------------------------------
-# # Workflow jobs
-# #-------------------------------------------------------------------------------
+on: workflow_dispatch
+  
+jobs:
+  build-ios:
+    runs-on: macos-latest
 
-# jobs:
-#   ## GNU/Linux flatpak build ###################################################
-#   build-flatpak:
-#     name: "Flatpak build"
-#     runs-on: ubuntu-20.04
-#     container:
-#       image: bilelmoussaoui/flatpak-github-actions:freedesktop-22.08
-#       options: --privileged
-#     steps:
-#     - uses: actions/checkout@v3
-#     - uses: bilelmoussaoui/flatpak-github-actions/flatpak-builder@v4
-#       with:
-#         bundle: watchflower.flatpak
-#         manifest-path: assets/linux/watchflower.flatpak.yml
-#         cache-key: flatpak-builder-${{ github.sha }}
+    steps:
+      - name: (4) Check out code
+        uses: actions/checkout@v3
+
+      - name: (5) Set up Xcode environment
+        uses: maxim-lobanov/setup-xcode@latest-stable
+        with:
+          xcode-version: 'latest'
+
+      - name: (6) Create build directory
+        run: mkdir ${RUNNER_TEMP}/build
+
+      - name: (7) Build with Xcode
+        working-directory: ${RUNNER_TEMP}/build
+        run: |
+          xcodebuild -project ${GITHUB_WORKSPACE}/Blume.xcodeproj -scheme Blume -sdk iphoneos -configuration Release clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+
+      - name: (8) Zip the build
+        working-directory: ${RUNNER_TEMP}
+        run: zip -r Blume-build.zip build/*
+
+      - name: (9) Save build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: Blume-Artifact
+          path: ${RUNNER_TEMP}/Blume-build.zip
