--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: (5) Set up Xcode environment
-        uses: maxim-lobanov/setup-xcode@latest-stable
+        uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: 'latest'
 
