--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: macos-latest
     defaults: 
       run:
-        working-directory: ./blume-build
+        working-directory: blume-build
 
     steps:
       - name: (4) Check out code
