--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -67,7 +67,7 @@ jobs:
       - name: 🔧 Configure
         run: |
           mkdir -p build
-          cmake \
+          ${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}/Qt/Tools/CMake/CMake.app/Contents/bin/cmake \
             -G "Xcode" \
             -Tbuildsystem=${{ matrix.build-system }} \
             -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}/Qt/${{ matrix.qt-version }}/ios/lib/cmake/Qt6/qt.toolchain.cmake \
@@ -83,37 +83,37 @@ jobs:
             -DQT_IOS_CODE_SIGN_IDENTITY=${{ secrets.IOS_CODE_SIGN_IDENTITY }} \
             -DQT_IOS_PROVISIONING_PROFILE_SPECIFIER=${{ secrets.IOS_PROVISIONING_PROFILE_SPECIFIER }} \
             -B ./build/ -S .
-      - name: 🔨 Build Blume
-        run: cmake --build build --target Blume --config "${{ matrix.build-type }}"
+      # - name: 🔨 Build Blume
+      #   run: cmake --build build --target Blume --config "${{ matrix.build-type }}"
       - name: 🔨 Build Blume Archive
         run: cmake --build build --target BlumeArchive --config "${{ matrix.build-type }}"
-      - name: 🚀 Deploy Blume Ipa
-        run: cmake --build build --target BlumeIpa --config "${{ matrix.build-type }}"
-      - name: 📦 Upload Blume App
-        uses: actions/upload-artifact@v2
-        with:
-          name: Blume-${{ matrix.platform }}-${{ matrix.deployment-target }}.app
-          path: build/${{ matrix.build-type }}-iphoneos/Blume.app
-      - name: 📦 Upload Blume Ipa
-        uses: actions/upload-artifact@v2
-        with:
-          name: Blume-i${{ matrix.platform }}-${{ matrix.deployment-target }}.ipa
-          path: build/BlumeIpa/Blume.ipa
-      - uses: OlivierLDff/upload-testflight-build@v1
-        if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v')
-        name: 🚀 Release to TestFlight
-        with:
-          app-path: build/BlumeIpa/Blume.ipa
-          issuer-id: ${{ secrets.IOS_APPSTORE_ISSUER_ID }}
-          api-key-id: ${{ secrets.IOS_APPSTORE_KEY_ID }}
-          api-private-key: ${{ secrets.IOS_APPSTORE_PRIVATE_KEY }}
-      - name: 🚀 Upload Release Asset
-        if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v')
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: build/BlumeIpa/Blume.ipa
-          asset_name: Blume-i${{ matrix.platform }}-${{ matrix.deployment-target }}.ipa
-          asset_content_type: application/zip
+      # - name: 🚀 Deploy Blume Ipa
+      #   run: cmake --build build --target BlumeIpa --config "${{ matrix.build-type }}"
+      # - name: 📦 Upload Blume App
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Blume-${{ matrix.platform }}-${{ matrix.deployment-target }}.app
+      #     path: build/${{ matrix.build-type }}-iphoneos/Blume.app
+      # - name: 📦 Upload Blume Ipa
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Blume-i${{ matrix.platform }}-${{ matrix.deployment-target }}.ipa
+      #     path: build/BlumeIpa/Blume.ipa
+      # - uses: OlivierLDff/upload-testflight-build@v1
+      #   if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v')
+      #   name: 🚀 Release to TestFlight
+      #   with:
+      #     app-path: build/BlumeIpa/Blume.ipa
+      #     issuer-id: ${{ secrets.IOS_APPSTORE_ISSUER_ID }}
+      #     api-key-id: ${{ secrets.IOS_APPSTORE_KEY_ID }}
+      #     api-private-key: ${{ secrets.IOS_APPSTORE_PRIVATE_KEY }}
+      # - name: 🚀 Upload Release Asset
+      #   if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v')
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ github.event.release.upload_url }}
+      #     asset_path: build/BlumeIpa/Blume.ipa
+      #     asset_name: Blume-i${{ matrix.platform }}-${{ matrix.deployment-target }}.ipa
+      #     asset_content_type: application/zip
