--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -49,9 +49,11 @@ jobs:
           aqtversion: "==3.1.*"
           version: ${{ matrix.qt-version }}
           target: 'ios'
+          cache: 'true'
           host: 'mac'
           dir: ${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}
-          cached: ${{ steps.cache-qt-ios.outputs.cache-hit }}
+          cache-key-prefix: 'install-qt-action'
+          tools: 'tools_cmake'
           modules: "qtconnectivity qtimageformats qtmultimedia qtnetworkauth qtpositioning qtsensors qtvirtualkeyboard qtwebsockets qtwebview qt5compat"
 
       - uses: OlivierLDff/import-codesign-certs@v1
