--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -53,9 +53,8 @@ jobs:
           host: 'mac'
           dir: ${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}
           cache-key-prefix: 'install-qt-action'
-          tools: 'tools_cmake'
           modules: "qtconnectivity qtimageformats qtmultimedia qtnetworkauth qtpositioning qtsensors qtvirtualkeyboard qtwebsockets qtwebview qt5compat"
-      - name: ⬆ Install Qt Macos
+      - name: ⬆ Install Qt Macos 2
         uses: jurplel/install-qt-action@v3
         with:
           aqtversion: "==3.1.*"
